add airflow container depends_on postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,37 @@ services:
       - ./sdc/data:/data
     ports:
       - "18630:18630"
+  # # Postgres container for Airflow needs
+  # postgres:
+  #   image: postgres:9.6
+  #   environment:
+  #     - POSTGRES_USER=airflow
+  #     - POSTGRES_PASSWORD=airflow
+  #     - POSTGRES_DB=airflow
+  # # Apache Airflow container
+  # airflow:
+  #   image: puckel/docker-airflow:1.10.4
+  #   depends_on:
+  #     - postgres
+  #   environment:
+  #     - LOAD_EX=n
+  #     - EXECUTOR=Local
+  #   volumes:
+  #     - ./airflow/dags:/usr/local/airflow/dags
+  #   ports:
+  #     - "8080:8080"
+  #   command: webserver
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "[ -f /usr/local/airflow/airflow-webserver.pid ]"]
+  #     interval: 30s
+  #     timeout: 30s
+  #     retries: 3
+  # Jupyter Notebook with pyspark
+  pyspark-notebook:
+    image: jupyter/pyspark-notebook
+    volumes:
+      - ./support_data/notebooks:/home/jovyan/work
+    ports:
+      - "8888:8888"
+      - "4041:4041"
+      - "4040:4040"
