--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,25 +13,18 @@ services:
       MYSQL_DATABASE: raw_data
     ports:
       - "3306:3306"
-  # Streamsets container
-  sdc:
-    build:
-      context: ./sdc
-      dockerfile: Dockerfile
-      args:
-        - SDC_VERSION=latest
-        - SDC_LIBS=streamsets-datacollector-jdbc-lib
-    volumes:
-      - ./sdc/data:/data
-    ports:
-      - "18630:18630"
-  # # Postgres container for Airflow needs
-  # postgres:
-  #   image: postgres:9.6
-  #   environment:
-  #     - POSTGRES_USER=airflow
-  #     - POSTGRES_PASSWORD=airflow
-  #     - POSTGRES_DB=airflow
+  # # Streamsets container
+  # sdc:
+  #   build:
+  #     context: ./sdc
+  #     dockerfile: Dockerfile
+  #     args:
+  #       - SDC_VERSION=latest
+  #       - SDC_LIBS=streamsets-datacollector-jdbc-lib
+  #   volumes:
+  #     - ./sdc/data:/data
+  #   ports:
+  #     - "18630:18630"
   # # Apache Airflow container
   # airflow:
   #   image: puckel/docker-airflow:1.10.4
@@ -50,6 +43,20 @@ services:
   #     interval: 30s
   #     timeout: 30s
   #     retries: 3
+  # # Postgres container for Airflow needs
+  # postgres:
+  #   image: postgres:9.6
+  #   environment:
+  #     - POSTGRES_USER=airflow
+  #     - POSTGRES_PASSWORD=airflow
+  #     - POSTGRES_DB=airflow
+  # Vertica container
+  vertica:
+    image: dataplatform/docker-vertica
+    ports:
+      - 5433:5433
+    volumes:
+      - ./vertica/:/tmp/input
   # Jupyter Notebook with pyspark
   pyspark-notebook:
     image: jupyter/pyspark-notebook
